--- a/sandpit/tutorial_iwatlas_basics.ipynb
+++ b/sandpit/tutorial_iwatlas_basics.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "##### Install iwatlas\n",
     "\n",
-    "`pip install git://github.com/mrayson/iwaves.git`\n",
+    "`pip install git://github.com/williamedge/iwaves.git`\n",
     "\n",
     "---\n",
     "\n",
